...
                  key: ValueKey('nav-search'),
                  icon: Icon(Icons.search),
                  selectedIcon: Icon(Icons.manage_search),
                  label: '搜索',
                ),
                NavigationDestination(
                  key: ValueKey('nav-library'),
                  icon: Icon(Icons.library_books_outlined),
                  selectedIcon: Icon(Icons.library_books),
                  label: '书架',
                ),
                NavigationDestination(
                  key: ValueKey('nav-settings'),
...
